--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
 
-  <link rel="shortcut icon" type="image/png" href="/assets/icon/favicon-32x32.png" />
+  <link rel="shortcut icon" type="image/png" href="/icon/favicon-32x32.png" />
 
   <!-- <link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/icon/favicon-32x32.png" />
