feat: setup themeprovider for MUI

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,6 +29,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="crowd.rocks" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
   </head>
 
   <body>
